ui/apps/io.ox/calendar/style.less
/* ... */
.csscolumns .calendar-detail .participant {
    margin: 0 0 1px 0;
    float: none;
}

// Timezone popups
.popover {

    &.timezones {
        width: auto;
        min-width: 236px;
        width: 280px;

        &:focus {
            outline: 1px solid @brand-primary;
            outline-offset: -4px;

            // border: 2px solid @brand-primary;
        }

        .popover-content ul {

            .time { float: right; }

            .label {
                float: right;
                margin-left: 5px;
            }
        }
    }
}

// Invitations
.itip-section.io-ox-busy { min-height: 60px; }

.itip-actions {
    text-align: right;
    margin: 8px 0 0 0;
    display: inline-block;

    .btn {
        margin-left: 8px;
        margin-top: 8px;
    }
}

.itip-item {
    padding: 16px;
    min-height: 72px;
    // same color as .well
    background-color: #F5F5F5;
}

.itip-item + .itip-item { border-top: 1px solid #aaa; }

.itip-annotations, .itip-changes, .itip-conflicts { margin: 16px 0; }

.itip-controls {
    text-align: right;
    margin-top: 16px;
    min-height: 32px;

    &:empty { min-height: initial; }
}

.itip-reminder {
    text-align: left;

    &.inline {
        display: inline-block;
    }
}

.itip-details {
    margin: 16px 0;

    .confirmation-status {
        &.accepted { color: @green; }
        &.declined { color: @red; }
        &.tentative { color: @orange; }
    }
}

.itip-conflicts {
    .vgrid-cell {
        padding: 10px 0;
        background-color: transparent;
        border-bottom: 1px solid #ccc;
        &:first-child { border-top: 1px solid #ccc; }
        &:last-child { border-bottom: 1px solid #ccc; }
    }

    .date { margin-right: 16px; }
}

.show-all-checkbox {
    padding-right: 16px;

    label {
        font-weight: 300;
        color: @hc-gray;
        margin: 20px 0;
    }

}

// io.ox/calendar/listview, io.ox/calendar/common-extensions
.calendar-item {

    .title {
        .ellipsis();
        font-weight: bold;
    }

    .interval {
        color: rgb(85, 85, 85);
        float: right;
        font-weight: 300;
    }

    .day {
        color: rgb(136, 136, 136);
        font-weight: 300;
    }

    .location {
        color: rgb(136, 136, 136);
        font-weight: 300;
        float: right;
    }

    .label { margin-left: 5px; }
}

.folder-tree.single-selection .folder {

    &:not(.selected) > .folder-node > .folder-label > .color-label {
        opacity: 0.3;
        background-color: transparent!important;

        &:before {
            content: '';
        }
    }

    &.selected > .folder-node > .folder-label > .color-label:before {
        display: block;
        font-family: 'FontAwesome';
        content: '\f00c';
        text-align: center;
        font-size: 13px;
        line-height: 16px;
    }
}

.confirm-dialog-legend {
    padding-top: 24px;
}

//
// Expandable section
//

.expandable {

    .expandable-content { display: none; }

    &.open .expandable-content { display: block; }

    .expandable-toggle { color: inherit; }

    .expandable-indicator:before {
        color: #aaa;
        content: "\f0da"; // fa-caret-right
    }

    &.open .expandable-indicator:before {
        content: "\f0d7"; // fa-caret-down
    }

    .table {
        width: auto;
        tr td, tr th {
            padding-left: 0;
            border: 0;
            vertical-align: middle;
        }
    }
}

.details-table {
    th {
        padding-right: 16px;
        font-weight: normal;
    }
    td, th {
        line-height: 16px;
    }
}

.recurrence-check-dialog {
    .date-time {
        font-weight: normal;
        margin-bottom: 16px
    }

    .clear-title {
        margin-top: 0;
        margin-bottom: 16px;
        font-size: 16pt;
    }

    .time {
        font-weight: bold;
        white-space: nowrap;

        .label-default {
            margin-left: 7px;
            position: relative;
            top: -1px;
            background-color: #767676;
        }
    }

    .date { white-space: nowrap; }
}

.shared-calendars {

    h4 {
        margin-bottom: 15px;
    }

    .item {
        display: flex;
    }

    .item-name {
        flex: 1;
        margin-top: 12px;
    }

    .item-block {
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .checkbox label {
        padding-left: 0px;
    }
    .checkbox,  .checkbox + .checkbox {
        margin: 10px 16px;
    }

    .disabled .checkbox.custom i.toggle{
        background-color: #eeeeee;
    }

    .list-group-item {
        padding: 5px 15px;

        &.page {
            cursor: pointer;
        }

        &.disabled {
            cursor: auto;
        }
    }
    .list-group-item.disabled {
        background-color: #fff;
    }

    li:focus {
        outline: 2px solid #3c73aa;
        text-decoration: underline;
    }
}

